Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </ul><h3>
 <a name="simple-installation" class="anchor" href="#simple-installation"><span class="octicon octicon-link"></span></a>Simple installation</h3>
 
-<p>Just download the jar file, put it anywhere and double-click it.</p>
+<p>Just download the <a href="https://github.com/erikjber/opengammatool/releases">latest release</a>, put it anywhere and double-click it.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
