Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
           <h3>
-<a name="a-simple-way-to-connect-to-your-gamma-scout" class="anchor" href="#a-simple-way-to-connect-to-your-gamma-scout"><span class="octicon octicon-link"></span></a>A simple way to connect to your Gamma Scout</h3>
+<a name="a-simple-way-to-connect-to-your-gamma-scout-geiger-counter" class="anchor" href="#a-simple-way-to-connect-to-your-gamma-scout-geiger-counter"><span class="octicon octicon-link"></span></a>A simple way to connect to your Gamma Scout Geiger counter</h3>
 
 <p>A cross-platform application that features an intuitive interface that lets you:</p>
 
@@ -45,7 +45,12 @@
 <li>Show counts per minute or micro Sievert per hour</li>
 <li>Erase device memory</li>
 <li>See the amount of device memory used</li>
-</ul><h3>
+</ul><h4>
+<a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h4>
+
+<p><img src="https://i.imgur.com/QwiWDQR.png" alt="OpenGammTool screenshot"></p>
+
+<h3>
 <a name="simple-installation" class="anchor" href="#simple-installation"><span class="octicon octicon-link"></span></a>Simple installation</h3>
 
 <p>Just download the <a href="https://github.com/erikjber/opengammatool/releases">latest release</a>, put it anywhere and double-click it.</p>
@@ -63,7 +68,7 @@
 <h3>
 <a name="gamma-scout" class="anchor" href="#gamma-scout"><span class="octicon octicon-link"></span></a>Gamma Scout</h3>
 
-<p>Gamma Scout geiger counters are available from <a href="http://www.gammascout.com/">their website.</a></p>
+<p>Gamma Scout Geiger counters are available from <a href="http://www.gammascout.com/">their website.</a></p>
         </section>
 
         <footer>
