--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/erikjber/opengammatool/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/erikjber/opengammatool/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/erikjber/opengammatool/releases/download/v0.1-beta/OpenGammaTool-v0.1-beta.jar" id="download-jar" class="button"><span>Download</span></a>
           <a href="https://github.com/erikjber/opengammatool" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -45,8 +44,8 @@
 <li>Show counts per minute or micro Sievert per hour</li>
 <li>Erase device memory</li>
 <li>See the amount of device memory used</li>
-</ul><h3>
-<a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h3>
+</ul><h4>
+<a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h4>
 
 <p><img src="https://i.imgur.com/QwiWDQR.png" alt="OpenGammTool screenshot"></p>
 
