--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 <p>Just download the <a href="https://github.com/erikjber/opengammatool/releases">latest release</a>, put it anywhere and double-click it.</p>
 
 <h3>
+<a name="cross-platform" class="anchor" href="#cross-platform"><span class="octicon octicon-link"></span></a>Cross-platform</h3>
+
+<p>Works on Windows, Mac, and Linux.</p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Written by Erik Berglund (<a href="https://github.com/erikjber" class="user-mention">@erikjber</a>) using the protocol documents by <a href="http://johannes-bauer.com/linux/gammascout/">Johannes Bauer</a>.</p>
