--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/erikjber/opengammatool/releases/download/v0.1-beta/OpenGammaTool-v0.1-beta.jar" id="download-jar" class="button"><span>Download</span></a>
+          <a href="https://github.com/erikjber/opengammatool/releases/download/v1.0/OpenGammaTool-1.0.jar" id="download-jar" class="button"><span>Download</span></a>
           <a href="https://github.com/erikjber/opengammatool" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
