Changes related to version 1.1.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/erikjber/opengammatool/releases/download/v1.0/OpenGammaTool-1.0.jar" id="download-jar" class="button"><span>Download</span></a>
+          <a href="https://github.com/erikjber/opengammatool/releases/download/v1.1/OpenGammaTool-1.1.jar" id="download-jar" class="button"><span>Download</span></a>
           <a href="https://github.com/erikjber/opengammatool" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -44,6 +44,8 @@
 <li>Show counts per minute or micro Sievert per hour</li>
 <li>Erase device memory</li>
 <li>See the amount of device memory used</li>
+<li>Zoom with mouse wheel</li>
+<li>Ctrl+drag to pan</li>
 </ul><h4>
 <a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h4>
 
@@ -52,7 +54,9 @@
 <h3>
 <a name="simple-installation" class="anchor" href="#simple-installation"><span class="octicon octicon-link"></span></a>Simple installation</h3>
 
-<p>Just download the <a href="https://github.com/erikjber/opengammatool/releases">latest release</a>, put it anywhere and double-click it.</p>
+<p>Just download the <a href="https://github.com/erikjber/opengammatool/releases">latest release</a>, put it anywhere and double-click it.<br/>
+(You must have <a href="https://java.com">Java</a> installed on your computer.)
+</p>
 
 <h3>
 <a name="cross-platform" class="anchor" href="#cross-platform"><span class="octicon octicon-link"></span></a>Cross-platform</h3>
