--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/erikjber/opengammatool/releases/download/v1.1/OpenGammaTool-1.1.jar" id="download-jar" class="button"><span>Download</span></a>
+          <a href="https://github.com/erikjber/opengammatool/releases/download/v1.3/OpenGammaTool-1.3.beta.jar" id="download-jar" class="button"><span>Download</span></a>
           <a href="https://github.com/erikjber/opengammatool" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
