Added link to Benjamin Renz, bug report form.

--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Written by Erik Berglund (<a href="https://github.com/erikjber" class="user-mention">@erikjber</a>) using the protocol documents by <a href="http://johannes-bauer.com/linux/gammascout/">Johannes Bauer</a>.</p>
+<p>Written by Erik Berglund (<a href="https://github.com/erikjber" class="user-mention">@erikjber</a>) using the protocol documents by <a href="http://johannes-bauer.com/linux/gammascout/">Johannes Bauer</a>.<br/>
+Protocol version 1 support by <a href="https://github.com/BenjaminRenz">Benjamin Renz</a></p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having problems? Please file a bug report!</p>
+<p>Having problems? Please <a href="https://github.com/erikjber/opengammatool/issues">file a bug report!</a></p>
 
 <h3>
 <a name="gamma-scout" class="anchor" href="#gamma-scout"><span class="octicon octicon-link"></span></a>Gamma Scout</h3>
